--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,34 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:text="@string/robotIP"
+        android:id="@+id/robotIP"
+        android:layout_marginTop="37dp"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/inputRobotIP"
+        android:text="192.168.1.5"
+        android:layout_below="@+id/robotIP"
+        android:layout_alignRight="@+id/robotIP"
+        android:layout_alignEnd="@+id/robotIP" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/testConnection"
+        android:id="@+id/testConnection"
+        android:layout_alignTop="@+id/robotIP"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="testConnection" />
+
 </RelativeLayout>
