--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,8 @@
             android:text="@string/start"
             android:layout_weight="2"
             android:id="@+id/start"
-            style="?android:attr/buttonBarButtonStyle"/>
+            style="?android:attr/buttonBarButtonStyle"
+            android:nestedScrollingEnabled="false" />
 
         <Button
             android:layout_width="0px"
@@ -63,17 +64,17 @@
         android:id="@+id/inputRobotIP"
         android:text="192.168.1.5"
         android:layout_below="@+id/robotIP"
-        android:layout_alignRight="@+id/robotIP"
-        android:layout_alignEnd="@+id/robotIP" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/testConnection"
         android:id="@+id/testConnection"
-        android:layout_alignTop="@+id/robotIP"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="testConnection" />
+        android:onClick="testConnection"
+        android:layout_below="@+id/inputRobotIP"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
