--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,19 +54,19 @@
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:text="@string/robotIP"
         android:id="@+id/robotIP"
-        android:layout_marginTop="37dp"
+        android:labelFor="@+id/inputRobotIP"
+        android:layout_marginTop="57dp"
         android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/inputRobotIP"
-        android:text="192.168.1.5"
-        android:layout_below="@+id/robotIP"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:text="@string/ip"
+        android:inputType="phone"
+        android:layout_alignTop="@+id/robotIP"
+        android:layout_toEndOf="@+id/testConnection" />
 
     <Button
         android:layout_width="wrap_content"
@@ -75,7 +75,6 @@
         android:id="@+id/testConnection"
         android:onClick="testConnection"
         android:layout_below="@+id/inputRobotIP"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
