--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#01564c</color>
+    <color name="colorPrimaryDark">#00cc00</color>
     <color name="colorAccent">#4050ff</color>
 </resources>
