--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,9 @@
         android:layout_marginTop="16dp"
         android:text="@string/sign_in"
         android:textStyle="bold"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:allowUndo="false"
+        android:onClick="attemptLogin" />
 
     <Button
         style="?android:textAppearanceSmall"
