--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,8 @@
         android:id="@+id/linearLayout"
         android:layout_below="@+id/textView"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="59dp">
+        android:layout_marginTop="59dp"
+        android:layout_alignParentRight="true">
 
         <TextView
             android:layout_width="0dp"
